--- a/src/styles/placements.css
+++ b/src/styles/placements.css
@@ -4,7 +4,7 @@
     --placement-alignment-x: var(--flex-alignment-y, stretch);
     --placement-alignment-y: var(--flex-alignment-x, stretch);
 
-    --placement-width: 100vw;
+    --placement-width: min(100%, 100vw);
     --placement-height: max-content;
 
     --placement-inset: calc(0% - var(--spacing-y)) 50% auto auto;
@@ -38,7 +38,7 @@
     --placement-alignment-y: var(--flex-alignment-y, stretch);
 
     --placement-width: max-content;
-    --placement-height: 100vh;
+    --placement-height: min(100%, 100vh);
 
     --placement-inset: auto auto 50% calc(0% - var(--spacing-x));
 
@@ -70,7 +70,7 @@
     --placement-alignment-x: var(--flex-alignment-y, stretch);
     --placement-alignment-y: var(--flex-alignment-x, stretch);
 
-    --placement-width: 100vw;
+    --placement-width: min(100%, 100vw);
     --placement-height: max-content;
 
     --placement-inset: auto 50% calc(0% - var(--spacing-y)) auto;
@@ -104,7 +104,7 @@
     --placement-alignment-y: var(--flex-alignment-y, stretch);
 
     --placement-width: max-content;
-    --placement-height: 100vh;
+    --placement-height: min(100%, 100vh);
 
     --placement-inset: auto calc(0% - var(--spacing-x)) 50% auto;
 
